# exstruct

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  README.ja.md  README.md  index.html  mkdocs.yml  output.json  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  codeql.yml  gh-pages.yml  pytest.yml
README.en/: index.html
README.ja/: index.html
agents/API_DESIGN/: index.html
agents/ARCHITECTURE/: index.html
agents/CODE_REVIEW/: index.html
agents/CODING_GUIDELINES/: index.html
agents/CONTRIBUTING_FOR_AI/: index.html
agents/DATA_MODEL/: index.html
agents/EXCEL_EXTRACTION/: index.html
agents/FEATURE_SPEC/: index.html
agents/OVERVIEW/: index.html
agents/RAG_INTEGRATION/: index.html
agents/ROADMAP/: index.html
agents/TASKS/: index.html
agents/TEST_REQUIREMENTS/: index.html
api/: index.html
architecture/pipeline/: index.html
cli/: index.html
concept/: index.html
contributors/architecture/: index.html
dev-docs/agents/: contributing.md  overview.md
dev-docs/architecture/: contributor-guide.md  overview.md
dev-docs/specs/: excel-extraction.md
docs/: FEATURE_SPEC.md  README.en.md  README.ja.md  TEST_REQUIREMENTS.md  api.md  cli.md  index.md  license-guide.md
license-guide/: index.html
schemas/: arrow.json  chart.json  index.html  print_area_view.json  shape.json  sheet.json  smartart.json  workbook.json
scripts/: gen_json_schema.py  gen_model_docs.py
search/: search_index.json
tasks/: feature_spec.md  lessons.md  todo.md
tests/: conftest.py  test_arrow_direction.py  test_auto_page_breaks.py  test_cells_and_tables.py  test_cells_utils.py  test_charts_extraction.py  test_cli.py  test_colors_map.py  test_conftest_libreoffice_runtime.py  test_constraints.py  test_engine.py  test_error_handling.py  test_export_requirements.py  test_integrate_fallback.py  test_integrate_raw_data.py  test_mode_output.py  test_models_export.py  test_models_validation.py  test_pipeline.py  test_print_area_views.py  test_print_areas_openpyxl.py  test_render_smoke.py  test_shapes_extraction.py
(+63 files in other folders)
