[project]
name = "exstruct"
version = "0.2.3"
description = "Excel to structured JSON (tables, shapes, charts) for LLM/RAG pipelines"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["excel", "structure", "data", "exstruct"]
authors = [
    { name = "harumiWeb", email = "ganaharumi@outlook.jp" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "scipy>=1.16.3",
    "xlwings>=0.33.16",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.8",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0.3"]
toon = ["python-toon>=0.1.3"]
render = ["pypdfium2>=5.1.0", "Pillow>=12.0.0"]

[project.scripts]
exstruct = "exstruct.cli.main:main"

[project.urls]
Homepage = "https://harumiweb.github.io/exstruct/"
Repository = "https://github.com/harumiWeb/exstruct"
Issues = "https://github.com/harumiWeb/exstruct/issues"
Documentation = "https://harumiweb.github.io/exstruct/"

[tool.coverage.run]
omit = [
    "tests/*",
    "*/test_*.py",
    "*/gen_py/*",
]

[tool.ruff]
# 対象ディレクトリ
src = ["exstruct"]

# 対象 Python バージョン
target-version = "py311"

# チェックするルール
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # import sorting (isort 相当)
    "C90", # mccabe: 複雑度
    "UP",  # pyupgrade: Python の最新構文へ
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
]

# 除外したいルール（必要に応じて）
ignore = [
    "E501",  # 1行が長い許容（ExStruct は JSON 出力・COM 対応で長くなりやすい）
    "B008",  # 関数のデフォルト引数に関数を使う禁止 → Pydantic でよく使うので無効
]

# 自動修正を許可
fix = true

# import 並び替えの設定（isort の代替）
[tool.ruff.isort]
combine-as-imports = true
known-first-party = ["exstruct"]

# docstring チェック
[tool.ruff.pydocstyle]
convention = "google"

